Fixed music player alignment

--- a/webapp/app/css/app.less
+++ b/webapp/app/css/app.less
@@ -102,6 +102,7 @@ body {
   top:50%;
   left:50%;
   margin-left:-300px;
+  margin-top:-59px;
   height:auto;
 }
 .play {
